# py-fastapi-homework-1-task

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
commands/: run.sh
src/: main.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  models.py  populate.py  session.py
src/routes/: __init__.py  movies.py
src/schemas/: __init__.py  movies.py
src/tests/: conftest.py
src/tests/test_integration/: test_movies.py
